// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getButtonAttributes() should return correct aria attributes for isDisabled: false, isLoading: false and isChecked: false 1`] = `
Object {
  "aria-busy": null,
  "aria-checked": "false",
  "aria-disabled": null,
  "aria-labelledby": "label",
}
`;

exports[`getButtonAttributes() should return correct aria attributes for isDisabled: false, isLoading: false and isChecked: true 1`] = `
Object {
  "aria-busy": null,
  "aria-checked": "true",
  "aria-disabled": null,
  "aria-labelledby": "label",
}
`;

exports[`getButtonAttributes() should return correct aria attributes for isDisabled: false, isLoading: true and isChecked: false 1`] = `
Object {
  "aria-busy": "true",
  "aria-checked": "false",
  "aria-disabled": "true",
  "aria-labelledby": "label",
}
`;

exports[`getButtonAttributes() should return correct aria attributes for isDisabled: false, isLoading: true and isChecked: true 1`] = `
Object {
  "aria-busy": "true",
  "aria-checked": "true",
  "aria-disabled": "true",
  "aria-labelledby": "label",
}
`;

exports[`getButtonAttributes() should return correct aria attributes for isDisabled: true, isLoading: false and isChecked: false 1`] = `
Object {
  "aria-busy": null,
  "aria-checked": "false",
  "aria-disabled": "true",
  "aria-labelledby": "label",
}
`;

exports[`getButtonAttributes() should return correct aria attributes for isDisabled: true, isLoading: true and isChecked: false 1`] = `
Object {
  "aria-busy": "true",
  "aria-checked": "false",
  "aria-disabled": "true",
  "aria-labelledby": "label",
}
`;

exports[`getButtonAttributes() should return correct aria attributes for isDisabled: true, isLoading: true and isChecked: true 1`] = `
Object {
  "aria-busy": "true",
  "aria-checked": "true",
  "aria-disabled": "true",
  "aria-labelledby": "label",
}
`;
